<resources>
    <string name="app_name">URNC</string>
    <string name="app_name2">URNC Wallet</string>
    <string name="no_internet_connection">There\'s no internet connection</string>
    <string name="warning_rooted_device">We have detected that you are using a rooted phone. Please be aware that URNC does not support rooted devices.</string>
    <string name="zopim_account_id">Djkq9NU7Vb209vw0DMoU3FjBUmN4Fd9A</string>
    <string name="button_next">Next</string>
    <string name="button_go">Go</string>
    <string name="button_continue">Continue</string>
    <string name="button_submit">Submit</string>
    <string name="button_ok">OK</string>
    <string name="button_yes">Yes</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_resend">Resend</string>
    <string name="button_complete">Complete</string>
    <string name="button_search">Search</string>
    <string name="button_edit">Edit</string>
    <string name="button_done">Done</string>
    <string name="button_delete">Delete</string>
    <string name="button_upgrade">Upgrade</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="error_fullname_empty">Fullname is empty</string>
    <string name="error_phone_empty">Phone Number is empty</string>
    <string name="error_email_empty">Email is empty</string>
    <string name="error_price_empty">Price is empty</string>
    <string name="error_amount_empty">Price is empty</string>
    <string name="error_price_invalid">Price is invalid</string>
    <string name="error_amount_invalid">Amount is invalid</string>
    <string name="error_email_invalid">Email is invalid</string>
    <string name="error_email_not_match">Email doesn\'t match</string>
    <string name="error_username_empty">Username is empty</string>
    <string name="error_username_short">Username is too short</string>
    <string name="error_password_empty">Password is empty</string>
    <string name="error_password_short">Password is too short</string>
    <string name="error_phone_invalid">Phone number is invalid</string>
    <string name="error_password_not_match">Password doesn\'t match</string>
    <string name="error_code_empty">Code is empty</string>
    <string name="error_field_empty">This field is required</string>
    <string name="error_field_invalid">This field is invalid</string>
    <string name="error_invalid_birth">You must be 18 years or older to use URNC.</string>
    <string name="error_ssn_short">TIN is too short</string>
    <string name="home_easy">It\'s easy to URNC</string>
    <string name="home_register">Create An Account</string>
    <string name="home_login">Sign In</string>
    <string-array name="tutorial_title">
        <item>Welcome\n</item>
        <item>RECIEVE $1000 UPON SIGN UP</item>
    </string-array>
    <string-array name="tutorial_description">
        <item>A SIMPLE STRAIGHTFORWARD SOLUTION WITH NO RISK</item>
        <item>Donated to your choice between...</item>
    </string-array>
    <string name="sign_up">Sign Up</string>
    <string name="title_email">Your e-mail address</string>
    <string name="email_input_label">Your e-mail</string>
    <string name="email_input_hint">example@email.com</string>
    <string name="email_input_hint2">you@example.com</string>
    <string name="title_username">Pick your username</string>
    <string name="username_input_description">This is how other Wallet users can find you and send you payments.</string>
    <string name="username_input_label">Your username</string>
    <string name="username_input_hint">Enter username</string>
    <string name="username_validating">Checking&#8230;</string>
    <string name="username_valid">Available</string>
    <string name="username_invalid">Username is taken</string>
    <string name="password_input_label">Your password</string>
    <string name="password_input_hint">Enter password</string>
    <string name="password_input_hint2">Minimum 8 characters</string>
    <string name="check_email_hint">Please check your e-mail for the link to continue</string>
    <string name="resend_email_success">Email sent again</string>
    <string name="open_email">Open e-mail</string>
    <string name="phone_input_label">Your phone number</string>
    <string name="verify_phone_hint">We require your phone number to verify your account.</string>
    <string name="send_code">Send Verification Code</string>
    <string name="verification_code">Verification Code (SMS)</string>
    <string name="resend_code_success">Code sent again</string>
    <string name="thank_you">Thank you</string>
    <string name="phone_verify_success">Your phone number has\nbeen verified</string>
    <string name="referral_code">Referral Code</string>
    <string name="enter_login">Enter Referral Code</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_username">Forgot Username</string>
    <string name="your_username">Your username is</string>
    <string name="remember_username">Remember usernames are case sensitive</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_hint">To change your password please enter the code we sent to your mobile device.</string>
    <string name="new_password_input_label">Change Password</string>
    <string name="new_password_input_hint">Enter a new password</string>
    <string name="confirm_new_password_input_label">Confirm Password</string>
    <string name="confirm_new_password_input_hint">Re-enter new password</string>
    <string name="password_change_success_title">Password Changed!</string>
    <string name="password_change_success_description">Your password has been changed</string>
    <string name="verification_code_2fa">Verification Code (2FA)</string>
    <string name="create_passcode">Create Passcode</string>
    <string name="enter_new_passcode">Enter New Passcode</string>
    <string name="confirm_passcode">Re-enter Passcode</string>
    <string name="do_later">I\'ll do this later</string>
    <string name="touch_id">Touch ID</string>
    <string name="touch_id_hint">Use Touch ID instead of PIN to authenticate URNC and access your wallet</string>
    <string name="enable_touch_id">Enable Touch ID</string>
    <string name="confirm_with">Confirm with</string>
    <string name="welcome">Welcome</string>
    <string name="review_policy_and_terms">Please review the URNC Wallet Privacy Policy and Terms Service.</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="accept_terms">I accept the Terms of Service and Privacy Policy</string>
    <string name="accept_terms2">I certify that I am 18 years of age or older, and I agree to the User Agreement and Privacy Policy.</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="user_agreement">User Agreement</string>
    <string name="title_price">Prices</string>
    <string name="portfolio_balance">Main Portfolio Balance</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
    <string name="market_stats">Market Stats</string>
    <string name="market_cap">Market Cap</string>
    <string name="market_cap_description">The measure of the total market value of a traded asset, calculated by multiplying the outstanding number of assets in circulation by the current asset price.</string>
    <string name="volume">Volume</string>
    <string name="volume_description">The total value of the global trades of this assets in the past 24 hours.</string>
    <string name="circulating_supply">Circulating Supply</string>
    <string name="circulating_supply_description">The approximate total number of coins that are currently in circulation and in the possession of the general public.</string>
    <string name="more_assets">More Assets</string>
    <string name="more_fiats">More Fiats</string>
    <string name="select_wallet">Select Wallet</string>
    <string name="crypto">Crypto</string>
    <string name="fiat">Fiat</string>
    <string name="your_wallets">Your Wallets</string>
    <string name="search_coins">Search Coins&#8230;</string>
    <string name="title_wallet">Wallet</string>
    <string name="card">Card</string>
    <string name="transaction_history">Latest History</string>
    <string name="no_transactions">No transactions found. Press the Buy button above or deposit your asset now to start using your Wallet.</string>
    <string name="error_no_default_wallet">You must have at least one active asset/currency at all times.</string>
    <string name="rate">Rate</string>
    <string name="received">Received</string>
    <string name="exchanged">Exchanged</string>
    <string name="status">Status</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="method">Method</string>
    <string name="unlock">Unlock</string>
    <string name="sent">Sent</string>
    <string name="reward">Reward</string>
    <string name="card_lock">Card Lock</string>
    <string name="locked_amount">Locked Amount</string>
    <string name="benefits">Benefits</string>
    <string name="release_date">Card Lock\nRelease Date</string>
    <string name="referral_rewards">Referral Rewards</string>
    <string name="urnc_vip">URNC VIP</string>
    <string name="keep_lock">Keep Lock</string>
    <string name="no_favorite_wallets">The user has no favorite wallets. Please URNC favorite item to right side.</string>
    <string name="card_unavailable_title">Sorry URNC Cards are not available in your region yet.</string>
    <string name="phone_number">Phone Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zip Code</string>
    <string name="contact">Contact</string>
    <string name="contact_description">If you need to change your address please\ncontact support by clicking here</string>
    <string name="receive_title_first">RECIEVE</string>
    <string name="receive_title_second">$1000</string>
    <string name="receive_title_third">UPON</string>
    <string name="receive_title_forth">SIGN UP</string>
    <string name="receive_description">Donated to your choice between...</string>
    <string name="login_title">Log Into Your Account</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button_label">Sign In</string>
    <string name="login_forgot_label">Forgot Your Password?</string>
    <string name="login_forgot_link">Click Here</string>
    <string name="login_no_account">Don\'t have an account?</string>
    <string name="login_signup_link">Sign Up</string>
    <string name="signup_title">Create Your Account</string>
    <string name="signup_username">Username</string>
    <string name="signup_fullname">Fullname</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_password_confirm">Confirm Password</string>
    <string name="signup_phone">Phone Number</string>
    <string name="signup_button_label">Sign Up</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_deposit">Deposit</string>
    <string name="address">Address</string>
    <string name="title_buy">Buy</string>
    <string name="title_order">Order</string>
    <string name="title_setting">Setting</string>
    <string name="user_profile">User Profile</string>
    <string name="save">Save</string>
</resources>