<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/default_margin_large">

    <TextView
        android:layout_marginTop="@dimen/default_margin_small"
        style="@style/ReceiveText"
        android:textAlignment="center"
        android:textSize="@dimen/text_xxlarge"
        android:text="@string/receive_title_first"/>
    <TextView
        style="@style/ReceiveText"
        android:textAlignment="center"
        android:textSize="@dimen/text_xxlarge"
        android:text="@string/receive_title_second"/>
    <TextView
        style="@style/ReceiveText"
        android:textAlignment="center"
        android:textSize="@dimen/text_xxlarge"
        android:text="@string/receive_title_third"/>
    <TextView
        style="@style/ReceiveText"
        android:textAlignment="center"
        android:textSize="@dimen/text_xxlarge"
        android:text="@string/receive_title_forth"/>
    <TextView
        android:id="@+id/description"
        style="@style/DescriptionText"
        android:lineSpacingExtra="4dp"
        android:lines="2"
        android:textAlignment="center"
        android:text="@string/receive_description"/>
</LinearLayout>
