<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/default_margin_xxxlarge">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@mipmap/logo_dark"/>
                </FrameLayout>

                <TextView
                    android:id="@+id/title"
                    android:layout_marginTop="@dimen/default_margin_large"
                    style="@style/DefaultText"
                    android:lineSpacingExtra="4dp"
                    android:layout_gravity="center"
                    android:textSize="@dimen/text_title"
                    android:text="@string/login_title"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/default_margin_xxxlarge"
                    android:layout_marginBottom="@dimen/default_margin_large">

                    <EditText
                        android:id="@+id/editEmail"
                        android:imeActionLabel="@string/button_next"
                        android:imeOptions="actionNext"
                        android:hint="@string/login_email"
                        style="@style/LoginInput"/>

                    <EditText
                        android:id="@+id/editPassword"
                        android:imeActionLabel="@string/button_go"
                        android:imeOptions="actionGo"
                        android:inputType="textPassword"
                        android:paddingEnd="@dimen/default_margin_3x"
                        android:hint="@string/login_password"
                        style="@style/LoginInput">
                    </EditText>
                </LinearLayout>

                <Button
                    style="@style/DefaultButton.Blue"
                    android:onClick="onLogin"
                    android:text="@string/login_button_label" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin_large"
                    android:layout_marginEnd="@dimen/default_margin_large"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin_2x"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">

                    <TextView
                        style="@style/DefaultText"
                        android:text="@string/login_forgot_label"
                        android:textSize="@dimen/text_item"/>
                    <TextView
                        android:onClick="onForgotPassword"
                        android:paddingLeft="10dp"
                        style="@style/DefaultText"
                        android:text="@string/login_forgot_link"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_item"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin_large"
                    android:layout_marginEnd="@dimen/default_margin_large"
                    android:layout_marginTop="100dp"
                    android:layout_marginBottom="@dimen/default_margin_2x"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">

                    <TextView
                        style="@style/DefaultText"
                        android:text="@string/login_no_account"
                        android:textSize="@dimen/text_item"/>
                    <TextView
                        android:onClick="goSignUp"
                        android:paddingLeft="10dp"
                        style="@style/DefaultText"
                        android:text="@string/login_signup_link"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_item"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <include layout="@layout/progress"/>
</FrameLayout>
