<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStartWithNavigation="0dp"
        app:theme="@style/ToolbarColoredBackArrow">

        <TextView
            android:id="@+id/txtTitle"
            style="@style/TitleText"
            android:text="@string/title_email"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_marginStart="@dimen/default_margin_large"
            style="@style/DefaultText"
            android:alpha="0.3"
            android:text="@string/email_input_label"/>
        <EditText
            android:id="@+id/editText"
            android:imeActionLabel="@string/button_go"
            android:imeOptions="actionGo"
            android:inputType="textEmailAddress"
            style="@style/LoginInput"/>
    </LinearLayout>
    <Button
        android:onClick="onNext"
        android:layout_margin="@dimen/default_margin_2x"
        style="@style/DefaultButton.Dark"
        android:text="@string/button_next"/>

</LinearLayout>
